--- a/life.html
+++ b/life.html
@@ -5,11 +5,11 @@
 span {
 	background: #99f;
 	display: block;
-	height: 10px;
-	width: 10px;
+	height: 1em;
+	width: 1em;
 	float: left;
 	margin: 1px;
-	padding::;
+	padding:0;
 }
 
 .alive {
